# em-as-net

./: .gitignore  Cargo.toml  README.md
examples/std-tokio/: Cargo.toml  README.md
src/: constants.rs  lib.rs
src/_anyhow/: mod.rs
src/client/: mod.rs
src/client/websocket/: async_websocket_client.rs  errors.rs  mod.rs
src/core/: mod.rs
src/core/dns/: mod.rs
src/core/dns/queries/: errors.rs  mod.rs
src/core/dns/queries/a/: mod.rs
src/core/dns/queries/aaaa/: mod.rs
src/core/framed/: errors.rs  exceptions.rs  framed_impl.rs  mod.rs
src/core/framed/codec/: decoder.rs  encoder.rs  exceptions.rs  mod.rs
src/core/io/: async_read.rs  async_write.rs  exceptions.rs  io_slice.rs  mod.rs  read_buf.rs
src/core/tcp/: adapters.rs  errors.rs  exceptions.rs  mod.rs  tls.rs
src/core/tcp/error/: mod.rs  tcp_socket_error.rs  tcp_stack_error.rs
src/core/tcp/stack/: config.rs  device.rs  mod.rs
src/core/tls/: adapters.rs  errors.rs  mod.rs
src/utils/: mod.rs
tests/common/: codec.rs  constants.rs  mod.rs
tests/integration/clients/: async_websocket.rs
tests/std-tokio/: Cargo.toml
