[package]
name = "em-as-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "em_as_net"
crate-type = ["lib"]

[features]
std = [
    "embassy-executor/std",
    "embassy-net/std",
    "embassy-time/std",
    "embassy-time/generic-queue",
    "tokio/full",
]
test = [
    "embassy-executor/std",
    "embassy-net/std",
    "embassy-time/std",
    "embassy-time/generic-queue",
    "tokio/full",
]

[dependencies]
anyhow = { version = "1.0.68", default-features = false }
embedded-io = { version = "0.4.0", features = ["async"], default-features = false }
# embedded-tls = "0.11.0"
# embedded-websocket = "0.8.0"
heapless = { version = "0.7.16", default-features = false }
libc = "0.2.139"
rand = "0.8.5"
static_cell = "1.0"
thiserror-no-std = "2.0.2"
tokio = { version = "1.25.0", default-features = false, optional = true }

[dependencies.embassy-net]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-net"
version = "0.1.0"
features = ["nightly", "tcp", "medium-ethernet", "dhcpv4", "unstable-traits"]

[dependencies.embassy-net-driver-channel]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-net-driver-channel"
version = "0.1.0"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-executor"
version = "0.1.1"
features = ["nightly"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-futures"
version = "0.1.0"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-time"
version = "0.1.0"
