[package]
name = "em-as-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "em_as_net"
crate-type = ["lib"]

[dependencies]
anyhow = { version = "1.0.68", default-features = false }
heapless = { version = "0.7.16", default-features = false }
libc = { version = "0.2.139", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_core = { version = "0.6.4", default-features = false }
static_cell = { version = "1.0", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
futures = { version = "0.3.25", default-features = false }
embedded-tls = { version = "0.14.1", default-features = false, features = ["async"], optional = true }
reqwless = "0.5.0"
tokio = { version = "1.27.0", default-features = false, optional = true }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"], default-features = false, optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tokio-util = { version = "0.7.7", optional = true }
bytes = { version = "1.4.0", default-features = false }
embedded-io = { version = "0.4.0", features = ["async"] }
pin-project-lite = "0.2.9"
strum_macros = { version = "0.25.1", default-features = false }
url = { version = "2.3.1", default-features = false }
embedded-nal-async = "0.4.0"
tokio-tungstenite = { version = "0.20.0", optional = true }

[dependencies.embedded-websocket]
# git version needed to use `framer_async`
git = "https://github.com/ninjasource/embedded-websocket"
version = "0.9.2"
default-features = false

[dependencies.embassy-net]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-net"
version = "0.1.0"
features = ["nightly", "tcp", "medium-ethernet", "dhcpv4", "proto-ipv6", "unstable-traits"]

[dependencies.embassy-net-driver]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-net-driver"
version = "0.1.0"

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-futures"
version = "0.1.0"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-time"
version = "0.1.0"

[features]
default = ["std", "dns", "websocket", "json-rpc"] # TODO: Add tls as soon as it's working
dns = ["embassy-net/dns"]
tls = ["embedded-tls"]
websocket = []
json-rpc = []
std = [
    "tokio/full",
    "embedded-websocket/std",
    "embedded-tls/std",
    "embedded-tls/tokio",
    "async-std",
    "tokio-rustls",
    "tokio-util/codec",
    "embassy-net/std",
    "embassy-time/std",
    "embassy-time/generic-queue",
    "rand/std",
    "rand/std_rng",
    "futures/std",
    "tokio-tungstenite/native-tls",
]
