[package]
name = "std-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
em-as-net = { path = "../.." }
tokio = { version = "1.27.0", features = ["full"] }
rand = "0.8.5"
embedded-tls = { version = "0.13.0", default-features = false, optional = true }
embedded-io = { version = "0.4.0", features = ["async"] }

[dependencies.embedded-websocket]
# git version needed to use `framer_async`
git = "https://github.com/ninjasource/embedded-websocket"
version = "0.9.2"

[[bin]]
name = "tcp"
path = "src/bin/tcp.rs"
required-features = []

[[bin]]
name = "adapter_from_tokio"
path = "src/bin/adapter_from_tokio.rs"
required-features = [
    "em-as-net/tls",
]

[[bin]]
name = "tls"
path = "src/bin/tls.rs"
required-features = [
    "em-as-net/tls",
    "embedded-tls/async",
    "embedded-tls/std",
    "embedded-tls/tokio",
]

[[bin]]
name = "ws"
path = "src/bin/ws.rs"
required-features = [
    "em-as-net/tls",
]

[[bin]]
name = "wss"
path = "src/bin/wss.rs"
required-features = [
    "em-as-net/tls",
    "embedded-tls/async",
    "embedded-tls/std",
    "embedded-tls/tokio"
]
